- new topic, new poll, and reply logic added. - attachment system in place !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! !!not fully tested, and code is still unstable                          !! !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/trunk/application/views/emails/english/eml_new_reply.twig
+++ b/trunk/application/views/emails/english/eml_new_reply.twig
@@ -1,8 +1,14 @@
-hi {{username}},
+hi {{USERNAME}},
 
-You have received this because {{author}} has replied to {{topic}}.
+You have received this because {{AUTHOR}} has replied to {{TITLE}}.
 
-{{boardAddr}}/viewtopic.php?tid={{tid}}&pid={{pid}}#{{pid}}
+{{BOARDADDR}}index.php/boards/viewtopic/{{TID}}
+
+-------------------------------------
+{{TOPIC_SUMMARY}}
+-------------------------------------
+
+
 
 There may be other replies to this topic, but you will not receive any new emails until you view this topic.
 
@@ -10,6 +16,6 @@ If you wish to stop receiving notices about this topic, go to your control panel
 
 regards,
 
-{{title}} Staff
+{{TITLE}} Staff
 ======
 This is an automated message, please do not reply to this email.
