--- a/trunk/application/views/simple2/css/style.css
+++ b/trunk/application/views/simple2/css/style.css
@@ -1,122 +1,10 @@
 /*
 ========================================
 Filename: style.css
-Last Modified: 02/19/2012
+Last Modified: 06/03/2012
 Simple2 CSS template file for Elite Bulletin Board v3.0.0 RC2
 ========================================
 */
-
-/*
-==============================
-AJAX CSS
-==============================
-*/
-
-#groupRoster{
-	font-family : Verdana, Arial, Helvetica, sans-serif;
-    font-size : 10px;
-	font-weight:bold;
-	background-color: #9FB6CD;
-	color: #000;
-	border: 1px solid #163061;
-	padding: 0;
-	width: 40%;
-	margin-left: 30%;
-	display:none;
-}
-
-/* CONSIDER EITHER MERGING OR REMOVING */
-#update{
-	font-family : Verdana, Arial, Helvetica, sans-serif;
-    font-size : 10px;
-	font-weight:bold;
-	background-color: #9FB6CD;
-	color: #000;
-	padding: 0;
-	width: 40%;
-	text-align: center;
-	margin-left: 30%;
-}
-
-/*
-==============================
-ERROR CSS (REPLACED)
-==============================
-*/
-#errorTitle{
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 1.3em;
-}
-
-#error{
-	color: #9C0006;
-	background-color: #FFC7CE;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 1em;
-	-webkit-border-radius: 10px; /* Safari prototype */
-	-moz-border-radius: 10px; /* Gecko browsers */
-	border-radius: 10px; /* Everything else - limited support at the moment */
-	padding: 0px 10px 0px 10px;
-	width: 50%;
-}
-
-/*
-==============================
-INFORMATION CSS (REPLACED)
-==============================
-*/
-#info{
-	color:#9C6500;
-	background:#FFEB9C;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 1em;
-	-webkit-border-radius: 10px; /* Safari prototype */
-	-moz-border-radius: 10px; /* Gecko browsers */
-	border-radius: 10px; /* Everything else - limited support at the moment */
-	padding: 0px 10px 0px 10px;
-	width: 50%;
-}
-
-/*
-==============================
-OK CSS (REPLACE)
-==============================
-*/
-#ok{
-	color:#006100;
-	background-color:#C6EFCE;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 1em;
-	-webkit-border-radius: 10px; /* Safari prototype */
-	-moz-border-radius: 10px; /* Gecko browsers */
-	border-radius: 10px; /* Everything else - limited support at the moment */
-	padding: 0px 10px 0px 10px;
-	width: 50%;
-}
-
-/*
-==============================
-LOGIN CSS
-==============================
-*/
-
-/* we could probably remove this. */
-.panel{
-	position:absolute;
-	font-family : Verdana, Arial, Helvetica, sans-serif;
-    font-size : 10px;
-	font-weight:bold;
-	background-color: #9FB6CD;
-	color: #000;
-	border: 1px solid #163061;
-	padding: 0;
-	width: 40%;
-	margin-left: 30%;
-	margin-top: 20%;
-	z-index: 1000;
-}
 
 /*
 ==============================
@@ -135,12 +23,12 @@ USER PORTAL CSS
 ==============================
 */
 .innertube{
-margin: 10px; /*Margins for inner DIV inside each column (to provide padding)*/
-margin-top: 0;
+	margin: 10px; /*Margins for inner DIV inside each column (to provide padding)*/
+	margin-top: 0;
 }
 #contentwrapper{
-float: left;
-width: 100%;
+	float: left;
+	width: 100%;
 }
 
 #contentcolumn{
@@ -148,9 +36,9 @@ width: 100%;
 }
 
 #leftcolumn{
-float: left;
-width: 260px; /*Width of left column in percentage*/
-margin-left: -100%;
+	float: left;
+	width: 260px; /*Width of left column in percentage*/
+	margin-left: -100%;
 }
 
 .avatar{
@@ -384,11 +272,6 @@ img{
 	border: 0px;
 }
 
-div#loading2{
-	background: #E9E9E9 url(../../../views/simple2/images/loading.gif) no-repeat right;
-	width: 200px;
-}
-
 .close{
 	float:right;
 }
@@ -398,6 +281,10 @@ div#loading2{
 UPLOAD CSS
 ==============================
 */
+#filePendings {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
 .uploadData {
 	padding: 5px;
 	width: 420px;
@@ -427,7 +314,16 @@ UPLOAD CSS
 	padding-left: 10px;
 }
 .uploadData .close {
-	background-image: url(../../../views/simple2/images/close.gif);
+	background-image: url(../../../views/simple2/images/close.png);
+	height: 16px;
+	width: 16px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+}
+.uploadData .delete {
+	background-image: url(../../../views/simple2/images/delete.png);
 	height: 16px;
 	width: 16px;
 	position: absolute;
@@ -576,7 +472,6 @@ ACP MENU CSS
 	width: 205px;
 	text-align: left;
 }
-
 .anylinkcss a{
 	width: 100%;
 	display: block;
@@ -587,7 +482,6 @@ ACP MENU CSS
 	font-weight: bold;
 	text-indent: 5px;
 }
-
 .anylinkcss a:hover{ /*hover background color*/
 	background-color: #C3C9D5;
 }
@@ -604,14 +498,12 @@ a.hint{
 	font-size: 11px;
 	margin: 3px 8px;
 }
-
 a.hint span {
 	display:none;
 	padding:2px 3px;
 	margin-left:8px;
 	width:130px;
 }
-
 a.hint:hover span{
 	display:inline;
 	position:absolute;
@@ -630,7 +522,11 @@ a.hint:hover span{
 	padding: 0px 10px 0px 10px;
 }
 
-/* Spell check CSS */
+/*
+==============================
+SPELL CHECK CSS
+==============================
+*/
 .spellcheck-suggestbox {
 	position: absolute;
 	display: none;
@@ -710,7 +606,7 @@ a.hint:hover span{
 
 /*
 ==============================
-Notification CSS
+NOTIFICATION CSS
 ==============================
 */
 
@@ -721,11 +617,9 @@ Notification CSS
 	width: 100%;
 	z-index: 100000;
 }
-
 .jnotify-container .jnotify-notification {
 	position: relative;
 }
-
 .jnotify-container .jnotify-notification .jnotify-background {
 	position: absolute;
 	top: 0;
@@ -738,7 +632,6 @@ Notification CSS
 	opacity: 0.90;
 	z-index: 1;
 }
-
 .jnotify-container .jnotify-notification a.jnotify-close,
 .jnotify-container .jnotify-notification a.jnotify-close:link,
 .jnotify-container .jnotify-notification a.jnotify-close:visited,
@@ -755,7 +648,6 @@ Notification CSS
 	z-index: 3;
 	cursor: pointer;
 }
-
 .jnotify-container .jnotify-notification .jnotify-message {
 	position: relative;
 	z-index: 2;
@@ -765,26 +657,21 @@ Notification CSS
 	font: bold 1.4em Arial,Helvetica,sans-serif;
 	line-height: 1.2em;
 }
-
 .jnotify-container .jnotify-notification .jnotify-message * {
 	font-size: 1em;
 }
-
 /* notification type == "error" */
 .jnotify-container .jnotify-notification-error .jnotify-background {
 	background-color: #d79eac;
 }
-
 .jnotify-container .jnotify-notification-error .jnotify-close,
 .jnotify-container .jnotify-notification-error .jnotify-message {
 	color: #a72947 !important;
 }
-
 /* notification type == "warning" */
 .jnotify-container .jnotify-notification-warning .jnotify-background {
 	background-color: #fff7d1;
 }
-
 .jnotify-container .jnotify-notification-warning .jnotify-close,
 .jnotify-container .jnotify-notification-warning .jnotify-message {
 	color: #c2a928 !important;
