--- a/trunk/application/views/emails/english/eml_report_topic.twig
+++ b/trunk/application/views/emails/english/eml_report_topic.twig
@@ -2,11 +2,12 @@ Hello,
 
 It has come to our attention that a user is abusing the board. Below is what the reported user has written:
 
-Reason for report: {{reason}}
-Message: {{msg}}
+Reeported By: {{REPORTED_BY}}
+Reason for report: {{REASON}}
+Message: {{MSG}}
 
 the topic can be found at:
 
-{{boardurl}}/viewtopic.php?bid={bid}&tid={tid}
+{{BOARDADDR}}index.php/boards/viewtopic/{{TID}}
 ======
 This is an automated message, please do not reply to this email.
