RSS feed parsing now works

--- a/trunk/application/views/simple2/master.twig
+++ b/trunk/application/views/simple2/master.twig
@@ -14,7 +14,7 @@
 
 <!--RSS & ICO -->
 {{LinkTag("application/views/simple2/images/favicon.ico", "shortcut icon", "image/ico")|raw}}
-{{LinkTag("boards/latestPost", "alternate", "application/rss+xml", pageTitle)|raw}}
+{{LinkTag("index.php/boards/latestPost", "alternate", "application/rss+xml", boardName)|raw}}
 {{LinkTag("search/results", "search", "application/opensearchdescription+xml", boardName)|raw}}
 
 <!-- Language JS File. -->
